 # Fixed spurious PHP errors on menu item edit page.
 + Added JTableAsset
 + Added check to JTableNested to ensure that parent node exists in the tree.
 ^ Added nested set fields (parent_id, lft, rgt, level) to jos_access_assets and removed section and section_id fields.

16-Sep-2009 Ron Severdia
+ BlueStork CSS updates
# Admin interface fixes
^ Replace tables in administrator components & mod_online/quickicon/unread
+ New & updated language strings

15-Sep-2009 Ron Severdia
# BlueStork CSS fixes/additions
^ Form tweaks for com_categories & com_content & com_users
^ Replace tables from com_config & com_menus

15-Sep-2009 Ron Severdia
# Accessibility improvements to com_config, mod_status. Thanks to Andrea Tarr.

13-Sep-2009 Hannes Papenberg
 + Added Profile Plugin from experimental branch. This makes it possible to extend your user profile easily.
 ^ Some performance improvements and changing some code to PHP strict.

13-Sep-2009 Gergo Erdosi
 ^ Replaced installation favicon.
 # [#18011] XML says category instead of categories
 # [#17983] [patch] New Categories are attaching to ROOT instead of designated parent
 # [#17980] Query Error in JHTML::_( 'list.users' )
 # Various E_STRICT validation fixes.
 ^ Changed arguments of setBuffer() method in JDocument classes.
 # [#18025] Make Toolbars conistent across administrator components
 # Fixed issue in the clean() method of JFilterInput.
 # Fixed issue with JRoute->parse().

12-Sep-2009 Ron Severdia
# BlueStork CSS fixes
# Article Manager cleanup
^ Replace tables in pane sliders
+ Robots dropdown added
+ Missing language strings added

11-Sep-2009 Hannes Papenberg
 ^ Ability to add additional layouts with own parameters via a template added to menu manager

10-Sep-2009 Ron Severdia
 # BlueStork fixes
 # Edit Category interface tweaks
 ^ Copied system images to admin template subfolder

10-Sep-2009 Ercan Ozkaya
 ^ Localised invalid token messages
 ^ Converted jExit calls to jexit
 # Fixed notices in com_messages